--- a/inst/exercises/R/introductionR/introductionR_A.Rmd
+++ b/inst/exercises/R/introductionR/introductionR_A.Rmd
@@ -195,8 +195,8 @@ plot(Area2, grid = Grid, ylab = "Area (m2)")
 
 ```{r, fig.width=10, fig.height = 4}
 
-LVmodel <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+LVmodel <- function(t, state, pars) {
+  with (as.list(c(state, pars)), {
 
     dX.dt <- a*X*(1-X/k) - b*X*Y
     dY.dt <- g*b*X*Y - e*Y
@@ -206,13 +206,13 @@ LVmodel <- function(t, state, parameters) {
   })
 }
 
-y.ini <- c(X = 670, Y = 610)
-parms <- c(a = 0.04, k = 1000, b = 5e-5, g = 0.8, e = 0.008)
+state.ini <- c(X = 670, Y = 610)
+pars      <- c(a = 0.04, k = 1000, b = 5e-5, g = 0.8, e = 0.008)
 times <- 1:100
-out   <- ode(y = y.ini, func = LVmodel, times = times, parms = parms)
+out   <- ode(y = state.ini, func = LVmodel, times = times, parms = pars)
 # change initial conditions
-y.ini2 <- c(X = 100, Y = 540) 
-out2   <- ode(y = y.ini2, func = LVmodel, times = times, parms = parms)
+state2.ini <- c(X = 100, Y = 540) 
+out2       <- ode(y = state2.ini, func = LVmodel, times = times, parms = pars)
 # plot results in one graph
 plot(out, out2, mfrow=c(1,3), col=c("black","red"), lty=c(1,1))
 ```
@@ -221,28 +221,29 @@ Now we experiment a little and explore how the predator-prey dynamics look like 
 
 ```{r, fig.width=10, fig.height = 4}
 times <- 1:1500
-parms1 <- parms
-parms1["b"] <- 1e-5
-out1  <- ode(y = y.ini, func = LVmodel, times = times, parms = parms1)
-parms2 <- parms
-parms2["b"] <- 1.3e-5
-out2  <- ode(y = y.ini, func = LVmodel, times = times, parms = parms2)
-parms3 <- parms
-parms3["b"] <- 5e-5
-out3  <- ode(y = y.ini, func = LVmodel, times = times, parms = parms3)
-parms4 <- parms
-parms4["b"] <- 10e-5
-out4  <- ode(y = y.ini, func = LVmodel, times = times, parms = parms4)
+pars1 <- pars
+pars1["b"] <- 1e-5
+out1  <- ode(y = state.ini, func = LVmodel, times = times, parms = pars1)
+pars2 <- pars
+pars2["b"] <- 1.3e-5
+out2  <- ode(y = state.ini, func = LVmodel, times = times, parms = pars2)
+pars3 <- pars
+pars3["b"] <- 5e-5
+out3  <- ode(y = state.ini, func = LVmodel, times = times, parms = pars3)
+pars4 <- pars
+pars4["b"] <- 10e-5
+out4  <- ode(y = state.ini, func = LVmodel, times = times, parms = pars4)
 plot(out1,out2,out3,out4, mfrow=c(1,3), col=c(1,2,3,4), lty=1)
-legend("right",legend=c("b=1e-5","b=1.3e-5","b=5e-5","b=10e-5"), col=1:4, lty=1)
+legend("right",title="Parameter b", col=1:4, lty=1,
+       legend=c(pars1["b"],pars2["b"],pars3["b"],pars4["b"]) )
 ```
 
 ### Lorenz model
 
 ```{r, fig.width=10, fig.height=7}
 
-Lorenz <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+Lorenz <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
     dX.dt <- -8/3*X + Y*Z
     dY.dt <- -10*(Y-Z)
     dZ.dt <- -X*Y + 28*Y - Z
@@ -250,11 +251,11 @@ Lorenz <- function(t, state, parameters) {
                  sum = X+Y+Z))
   })
 }
-parameters <-  NULL
-state      <- c(X = 1, Y = 1, Z = 1)
-time.seq   <- seq(from = 0, to = 100, by = 0.005)
+pars      <-  NULL
+state.ini <- c(X = 1, Y = 1, Z = 1)
+time.seq  <- seq(from = 0, to = 100, by = 0.005)
 # solve it
-out <- ode(y = state, times = time.seq, func = Lorenz, parms=parameters )
+out <- ode(y = state.ini, times = time.seq, func = Lorenz, parms=pars )
 head(out, n=4)
 plot(out, xlab = "time", lwd = 2)
 ```
