--- a/inst/exercises/R/introductionR/introductionR_Q.Rmd
+++ b/inst/exercises/R/introductionR/introductionR_Q.Rmd
@@ -942,9 +942,9 @@ The first step to solving this set of differential equations in R is to define t
 This function has three different arguments as input: the actual time (``t``), the values of the state variables (``state``) and the values of the parameters (``parameters``). 
   
 ```{r}
-model <- function(t, state, parameters) {
+model <- function(t, state, parms) {
   
-with( as.list(c(state, parameters)), {
+with( as.list(c(state, parms)), {
   
  dA.dt <- r*(x-A) - k*A*B
  dB.dt <- r*(y-B) + k*A*B
@@ -956,23 +956,22 @@ with( as.list(c(state, parameters)), {
 
 This function simply calculates the time derivatives of the state variables (``dA.dt`` and ``dB.dt``) and an output variable called "sum". The derivatives are combined in a vector, and both this vector and the output variable are returned as a list. 
 
-The R-statement ``with( as.list(c(state,parameters)), {`` ensures that the state variables and parameters can be addressed by their names. This statement embraces all other statements in the function --- it ends at the line that says ``})``.
+The R-statement ``with( as.list(c(state, parms)), {`` ensures that the state variables and parameters can be addressed by their names. This statement embraces all other statements in the function --- it ends at the line that says ``})``.
   
 ## Solving the differential equation model
 
 Before we can actually solve this model, we need to:
 
-* give values to the parameters (``parameters``);
-*	assign initial conditions to the state variables (``state``);
+* give values to the parameters (``pars``);
+*	assign initial conditions to the state variables (``state.ini``);
 *	generate a sequence of time values at which we want the output  (``time.seq``).
 
 ```{r}
-parameters <- c(x = 1, y = 0.1, k = 0.05, r = 0.05)
-state      <- c(A = 1, B = 1)  # the same order as dA.dt and dB.dt in the model function!!
-time.seq   <- seq(from = 0, to = 300, by = 1)
+pars      <- c(x = 1, y = 0.1, k = 0.05, r = 0.05)
+state.ini <- c(A = 1, B = 1)  # the same order as dA.dt and dB.dt in the model function!!
+time.seq  <- seq(from = 0, to = 300, by = 1)
 ```
  
-
 The model can now be solved. To do so, we use the integration routine ``ode``, which can be found in the R-package *deSolve* (Soetaert et al., 2010). This package is loaded first (using function ``require``).
 
 ```{r}
@@ -984,7 +983,7 @@ The routine ``ode`` will calculate a value for the state variables ``A`` and ``B
 The actual numerical solution of our ODE model is obtained by the following single R-statement:
 
 ```{r}
-out <- ode(y = state, times = time.seq, func = model, parms = parameters)
+out <- ode(y = state.ini, times = time.seq, func = model, parms = pars)
 ```
 
 The output is stored in a matrix, called ``out``. All we need to do now is to plot this model output. Before we do so, we can have a look at the top few rows of the output matrix:
@@ -1010,17 +1009,17 @@ matplot.0D(out, lty = 1, lwd = 2, main=NA)
 We can run the model with different values of the parameter ``k``, store the output in a matrix ``out2``, and plot the first and second run at the same time. In the code below, we first take a copy of the parameter vector (``parms2``), and then change the parameter named ("k"); we then solve the model, passing the updated parameter vector (``parms = parms2``). We can plot the outcome of the two runs at once. Note that by the argument ``mfrow = c(1,3)``, we force the output to be in one row and 3 columns (``mfrow`` stands for multiple figures in a row).
 
 ```{r, fig.width=8, fig.height = 3}
-parms2      <- parameters
-parms2["k"] <- 0.5
-out2 <- ode(y = state, times = time.seq, func = model, parms = parms2)
+pars2      <- pars
+pars2["k"] <- 0.5
+out2 <- ode(y = state.ini, times = time.seq, func = model, parms = pars2)
 plot(out, out2, lty = 1, lwd = 2, mfrow = c(1, 3))
 ```
 
 For completeness, the entire R-code that solves and plots the above set of differential equations is listed here.
 
 ```
-model <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+model <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
     
     dA.dt <- r*(x-A) - k*A*B
     dB.dt <- r*(y-B) + k*A*B
@@ -1029,12 +1028,12 @@ model <- function(t, state, parameters) {
  })
 }
 
-parameters <- c(x = 1, y = 0.1, k = 0.05, r = 0.05)
-state      <- c(A = 1, B = 1)
-time.seq   <- seq(from = 0, to = 300, by = 1)
+pars      <- c(x = 1, y = 0.1, k = 0.05, r = 0.05)
+state.ini <- c(A = 1, B = 1)
+time.seq  <- seq(from = 0, to = 300, by = 1)
 
 require(deSolve)
-out <- ode(y = state, times = time.seq, func = model, parms = parameters)
+out <- ode(y = state.ini, times = time.seq, func = model, parms = pars)
 plot(out, xlab = "time", ylab = "concentration", lwd = 2, type = "l")
 ```
 
@@ -1044,7 +1043,7 @@ Sometimes we are interested in the conditions of a differential equation where t
 
 ```{r}
 require(rootSolve)
-STD  <- steady(y = state, func = model, parms = parameters)
+STD  <- steady(y = state.ini, func = model, parms = pars)
 STD$y; STD$sum
 ```
 
