--- a/inst/exercises/biogeochemistry/crops_weed/crops_weed_A_econ.Rmd
+++ b/inst/exercises/biogeochemistry/crops_weed/crops_weed_A_econ.Rmd
@@ -30,10 +30,10 @@ In case the fertilisation is done before planting, we need to also include the l
 require(deSolve)  # package with solution methods
 
 # state variables, units = [molP/m2] - except for COST: [Euro/m2]
-state <- c(WEED = 0.001, CROP = 0.005, P1 = 0.1, P2 = 0.1, COST = 0.5, Plost = 0)
+state.ini <- c(WEED = 0.001, CROP = 0.005, P1 = 0.1, P2 = 0.1, COST = 0.5, Plost = 0)
 
 # parameters
-parms <- c(
+pars <- c(
   Paddition   = 0.9/90,    # [molP/m2/d]  Rate of P supply
   percolation = 0.05,      # [/d]         Rain rate
   ksCrop      = 2e-3,      # [molP/m2]    Monod coefficient for P uptake
@@ -51,8 +51,8 @@ parms <- c(
 )
 
 # Model function
-Crops <- function(t, state, params) {
-  with (as.list(c(state, params)), {
+Crops <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
 
 	# variables needed for rate expressions
     TotBiom    <- WEED + CROP       # total plant biomass
@@ -114,27 +114,27 @@ The 3rd run is used to assess the environmental and economic impact of reduced f
 outtimes <- seq(from = 0, to = 90, length.out = 100)  # run for 3 months
 
 # Continuous P-addition
-state["COST"] <- 0.5             # price of planting & fertilizer cost
-out <- ode(y = state, parms = parms, func = Crops, times = outtimes)
+state.ini["COST"] <- 0.5        # price of planting & fertilizer cost
+out <- ode(y = state.ini, parms = pars, func = Crops, times = outtimes)
 
-# Initial P ferilisation
+# Initial P fertilisation
 # Change the parameter values and initial conditions
-parms2 <- parms
-parms2["Paddition"] <- 0.0       # no continuous fertilization
-parms2["laborCost"] <- 1./7      # slightly cheaper if no continuous fertilization
+pars2              <- pars
+pars2["Paddition"] <- 0.0       # no continuous fertilization
+pars2["laborCost"] <- 1./7      # slightly cheaper if no continuous fertilization
 
-state2 <- state
-state2["P1"] <- 1                # higher value for P1
-state2["COST"] <- 0.5 + 5 + 0.9 * parms["PCost"] # price of planting, initial 
-                                                 # fertilisation (labor) & fertilizer cost 
-                                                 # (0.9 mol P m-2 is added)
-out2 <- ode(y = state2, parms = parms2, func = Crops, times = outtimes)
+state2.ini         <- state.ini
+state2.ini["P1"]   <- 1         # higher value for P1
+state2.ini["COST"] <- 0.5 + 5 +           # price of planting, initial 
+                      0.9 * pars["PCost"] # fertilisation (labor) & fertilizer cost
+                                          # (0.9 mol P m-2 is added)
+out2 <- ode(y = state2.ini, parms = pars2, func = Crops, times = outtimes)
 
 # Continuous P-addition at a quarter of the original rate
-state3 <- state
-parms3 <- parms
-parms3["Paddition"] <- parms3["Paddition"]*0.25
-out3 <- ode(y = state, parms = parms3, func = Crops, times = outtimes)
+state3.ini         <- state.ini
+pars3              <- pars
+pars3["Paddition"] <- pars3["Paddition"]*0.25
+out3 <- ode(y = state.ini, parms = pars3, func = Crops, times = outtimes)
 
 # visualise results
 plot(out, out2, out3, lty = 1, lwd = 2, mfrow=c(4,4))
