--- a/inst/exercises/chemistry/equilibriumNH3/equilibriumNH3_A.Rmd
+++ b/inst/exercises/chemistry/equilibriumNH3/equilibriumNH3_A.Rmd
@@ -19,7 +19,7 @@ We define the model function in analogy to the *EqModel_num* function. We can le
 
 ```{r}
 AmmoniaDegassing <- function(t, state, parms) {
-  with (as.list(c(state,parms)), {
+  with (as.list(c(state, parms)), {
     
     # calculate H from NHx and Hx numerically, using solveB
     H   <- solveB(Keq = Keq, Atot = NHx, Btot = Hx) 
@@ -42,18 +42,18 @@ AmmoniaDegassing <- function(t, state, parms) {
 Now, we define the model parameters and initial conditions. Here, we need to keep in mind that $pH=-log([H^+])$, where the proton concentration is in mol/L. Thus, all state variables, as well as the equilibrium constant $K_{eq}$, must be in this unit, too. Because the rate constant is in the unit of $d^{-1}$, we are going to solve the model on the time-scale of days.
 
 ```{r}
-parms <- c (Keq = 5.38e-10,     # mol/L
-            lambda = 1)         # 1/d
+pars      <- c (Keq    = 5.38e-10,  # mol/L
+                lambda = 1)         # 1/d
 
 # Initial concentration of total dissolved ammonia (given)
-NHx.ini <- 1e-3 # mol/L
+NHx.ini   <- 1e-3 # mol/L
 # Initial proton concentration, calculated from pH (given)
-H.ini  <- 10^(-8) # 10^(-pH), mol/L
+H.ini     <- 10^(-8) # 10^(-pH), mol/L
 # Initial total positive charge concentration, calculated from eq. 6
-Hx.ini <- H.ini + H.ini/(parms[["Keq"]] + H.ini) * NHx.ini
+Hx.ini    <- H.ini + H.ini/(pars[["Keq"]] + H.ini) * NHx.ini
 
 # initial conditions, lump-sum state variables NHx and Hx
-yini <- c(NHx = NHx.ini, Hx = Hx.ini)
+state.ini <- c(NHx = NHx.ini, Hx = Hx.ini)
 ```
 
 Now we are ready to run the model and plot the results as a function of time. We calculate the results for 20 days.
@@ -61,7 +61,7 @@ Now we are ready to run the model and plot the results as a function of time. We
 ```{r, fig.height=5, fig.width=10}
 require(deSolve)
 times <- seq(from=0, to=20, length.out=100) # days
-out <- ode(y=yini, times=times, func=AmmoniaDegassing, parms=parms)
+out <- ode(y=state.ini, times=times, func=AmmoniaDegassing, parms=pars)
 plot(out, mfrow=c(2,4), xlab="time (d)")
 ```
 We see that the most dramatic changes occur within the first 5 days, where the pH decreases from 8 until about 6. This shift towards a lower pH (higher [H$^+$]) causes the speciation of total ammonium to shift towards low [NH$_3$]. After 5 days, the NH$_3$ concentration is so low that the rate of its removal is close to zero (because the rate is proportional to [NH$_3$]), leading to a much slower pH dynamics.
